kitten/reported_bugs/rust/rust-80251/stderr.txt
error[E0658]: attributes on expressions are experimental

 --> mutant.rs:4:32

  |

4 | const CR : & 'static mut i32 = # [ test ] C ;

  |                                ^^^^^^^^^^

  |

  = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information

  = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable



thread 'rustc' panicked at 'expected exactly one expression', compiler/rustc_expand/src/expand.rs:279:30

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.53.0-nightly (07e0e2ec2 2021-03-24) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

end of query stack

error: aborting due to previous error



For more information about this error, try `rustc --explain E0658`.

